# Reverse-engineer-android-course

./: Readme.md
clicker/app/: build.gradle
clicker/app/src/androidTest/java/com/example/clicker/: ExampleInstrumentedTest.java
clicker/app/src/main/: AndroidManifest.xml
clicker/app/src/main/java/com/example/clicker/: MainActivity.java
clicker/app/src/main/res/layout/: activity_main.xml
clicker/app/src/main/res/values/: strings.xml
clicker/app/src/test/java/com/example/clicker/: ExampleUnitTest.java
java/com/justinhuman/: Cradit_Jagdish.java  FileUtil.java  Floating.java  Floating.java.bak  Launcher.java  MainActivity.java  Prefs.java  bullet.java
jni/: CMakeLists.txt  CN.h  Color.h  ElfImg.cpp  ImguiPP.cpp  ImguiPP.h  Includes.h  Items.h  Login.cpp  Login.h  Menu.h  SDK.hpp  Spoof.h  Tools.cpp  Tools.h  main.cpp  main.cpp.bak
jni/Includes/: Macros.h  Toast.hpp  Utils.cpp  obfuscate.h
